<resources>
    <string name="app_name">MoviiCat</string>
    <string name="title_share">Share</string>
    <string name="text_separator">|</string>
    <string name="title_overview">Overview</string>
    <string name="title_detail_movie">Detail Movie</string>
    <string name="field_popularity">Popularity: %.2f</string>
    <string name="field_airing_date">%1s - %2s</string>
    <string name="desc_poster">poster</string>
    <string name="title_detail_tv_show">Detail TV Show</string>
    <string name="type_movie">Movie</string>
    <string name="type_tv_show">TV Show</string>
    <string name="desc_logo">Logo</string>
    <string name="action_close">Close</string>
    <string name="error_message_1xx">OK</string>
    <string name="error_message_2xx">Request Success</string>
    <string name="error_message_3xx">Redirection</string>
    <string name="error_message_4xx">Bad Request</string>
    <string name="error_message_5xx">Server Error</string>
    <string name="error_message_network">Network Error</string>
    <string name="error_no_result">No Result</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="action_tap_to_retry">Tap to Retry</string>
    <string name="search_hint">Search…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>