<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="id.riverflows.moviicat.ui.home.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/nav_search"
        android:name="id.riverflows.moviicat.ui.home.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search"/>
    <fragment
        android:id="@+id/nav_favorite"
        android:name="id.riverflows.moviicat.ui.home.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_grid_or_list"/>
</navigation>