<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_normal"
        tools:context=".ui.detail.movie.DetailMovieActivity">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_height="300dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/desc_poster" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/DetailTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            tools:text="This is Title" />

        <TextView
            android:id="@+id/rating_separator"
            style="@style/DetailSeparator"
            android:layout_marginStart="8dp"
            android:text="@string/text_separator"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rate"
            app:layout_constraintStart_toEndOf="@+id/tv_popularity"
            app:layout_constraintTop_toTopOf="@+id/tv_rate" />

        <TextView
            android:id="@+id/tv_popularity"
            style="@style/DetailField"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_rate"
            tools:text="Popularity: 8378" />

        <TextView
            android:id="@+id/tv_rate"
            style="@style/DetailField"
            android:layout_marginStart="@dimen/space_small"
            android:layout_marginTop="@dimen/space_small"
            android:gravity="center_vertical"
            app:drawableEndCompat="@drawable/ic_rate"
            app:layout_constraintStart_toEndOf="@+id/rating_separator"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="8.5" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/DetailField"
            android:layout_marginTop="@dimen/space_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rate"
            tools:text="23 JSs 2837" />

        <TextView
            android:id="@+id/date_separator"
            style="@style/DetailSeparator"
            android:layout_marginStart="@dimen/space_small"
            android:text="@string/text_separator"
            app:layout_constraintBottom_toBottomOf="@+id/tv_release_date"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date"
            app:layout_constraintTop_toTopOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_release_status"
            style="@style/DetailField"
            android:layout_marginStart="@dimen/space_normal"
            tools:text="Released"
            app:layout_constraintStart_toEndOf="@+id/date_separator"
            app:layout_constraintTop_toTopOf="@+id/tv_release_date" />

        <HorizontalScrollView
            android:id="@+id/container_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_genres"
                style="@style/DetailChipGroup"
                tools:layout_height="64dp" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/field_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/title_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_chips" />

        <TextView
            android:id="@+id/tv_value_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_detail_field"
            android:layout_marginTop="@dimen/space_small"
            android:layout_marginBottom="@dimen/space_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_overview"
            tools:text="Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum " />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>